fix(menu): top alignment columns

--- a/site/client/css/header.scss
+++ b/site/client/css/header.scss
@@ -404,7 +404,7 @@
         .item {
             color: $primary-color;
             display: block;
-            padding: 0.4rem 0.5rem;
+            margin: 0 0.5rem 0.8rem;
 
             &:hover {
                 color: $primary-color-600;
